--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
     "next": "^13.5.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
+    "@types/styled-components": "^5.1.28",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "eslint": "^8.50.0",
     "eslint-config-standard-with-typescript": "^39.1.0",
