--- a/pages/.babelrc
+++ b/pages/.babelrc
@@ -1,4 +1,4 @@
 { 
   "present": ["next/babel"],
-  "plugins": [["styled-components", { "ssr": true }]]
+  "plugins": [["styled-components", { "ssr": true }], "inline-react-svg"]
 }
