--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^13.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "styled-reset": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
