--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-plugin-inline-react-svg": "^2.0.2",
     "babel-plugin-styled-components": "^2.1.4",
+    "eslint-config-airbnb": "^19.0.4",
     "next": "^13.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
