--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^13.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "styled-components": "^6.0.8",
     "styled-reset": "^4.5.1"
   },
