--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "styled-reset": "^4.5.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
