--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "babel-plugin-styled-components": "^2.1.4",
+    "bcryptjs": "^2.4.3",
     "eslint-config-airbnb": "^19.0.4",
     "next": "^13.5.3",
     "react": "^18.2.0",
