--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.6",
     "@types/bcryptjs": "^2.4.4",
+    "@types/react-redux": "^7.1.27",
+    "axios": "^1.5.1",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "babel-plugin-styled-components": "^2.1.4",
     "bcryptjs": "^2.4.3",
     "eslint-config-airbnb": "^19.0.4",
     "next": "^13.5.3",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
     "styled-components": "^6.0.8",
     "styled-reset": "^4.5.1"
   },
