--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "styled-components": "^6.0.8",
@@ -29,9 +30,11 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
+    "@types/react-outside-click-handler": "^1.3.1",
     "@types/styled-components": "^5.1.28",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "eslint": "^8.50.0",
