--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^13.5.3",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-outside-click-handler": "^1.3.0",
@@ -33,6 +34,7 @@
     "@types/lodash": "^4.14.199",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.24",
+    "@types/react-datepicker": "^4.15.1",
     "@types/react-dom": "^18.2.8",
     "@types/react-outside-click-handler": "^1.3.1",
     "@types/styled-components": "^5.1.28",
