--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
     "@types/bcryptjs": "^2.4.4",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/react-redux": "^7.1.27",
     "axios": "^1.5.1",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "babel-plugin-styled-components": "^2.1.4",
     "bcryptjs": "^2.4.3",
     "eslint-config-airbnb": "^19.0.4",
+    "jsonwebtoken": "^9.0.2",
     "next": "^13.5.3",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
