--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 JWT_SECRET=my_private_secret
 NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_GOOGLE_MAP_API=AIzaSyCmv-9FAq9k5CwwNV2IYJXKRoHa6HRb818
