--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,6 @@
 JWT_SECRET=my_private_secret
 NEXT_PUBLIC_API_URL=http://localhost:3000
 NEXT_PUBLIC_GOOGLE_MAP_API=AIzaSyCmv-9FAq9k5CwwNV2IYJXKRoHa6HRb818
+ACCESSKEY_ID=AKIAQ34S33IJX6NKUAHI
+SECRET_ACCESSKEY_ID=3hL9d7+DUs6xgIDJ7Udwj5t4daU2Uyq0Dt/ewZ2y
+S3_BUCKET_NAME=kms-bucker
