--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@types/bcryptjs": "^2.4.4",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/react-redux": "^7.1.27",
+    "aws-sdk": "^2.1473.0",
     "axios": "^1.5.1",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "babel-plugin-styled-components": "^2.1.4",
     "bcryptjs": "^2.4.3",
     "eslint-config-airbnb": "^19.0.4",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "next": "^13.5.3",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
+    "react-autosize-textarea": "^7.1.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -29,10 +32,12 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "styled-components": "^6.0.8",
-    "styled-reset": "^4.5.1"
+    "styled-reset": "^4.5.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/formidable": "^3.4.3",
     "@types/lodash": "^4.14.199",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.24",
@@ -40,6 +45,7 @@
     "@types/react-dom": "^18.2.8",
     "@types/react-outside-click-handler": "^1.3.1",
     "@types/styled-components": "^5.1.28",
+    "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "eslint": "^8.50.0",
     "eslint-config-standard-with-typescript": "^39.1.0",
